Fix change metrics CTA link alignment.

--- a/assets/sass/components/global/_googlesitekit-cta-link.scss
+++ b/assets/sass/components/global/_googlesitekit-cta-link.scss
@@ -32,8 +32,8 @@
 		fill: currentColor;
 	}
 
-	> span > svg {
-		vertical-align: bottom;
+	.googlesitekit-cta-link__text-wrapper > svg {
+		vertical-align: text-bottom;
 	}
 
 	&:hover {
